<resources>
    <!-- Titles -->
    <string name="title_app_name">Barter Trader</string>
    <string name="title_email_placeholder">Email</string>
    <string name="title_password_placeholder">Password</string>
    <string name="title_first_name_placeholder">First Name</string>
    <string name="title_last_name_placeholder">Last Name</string>
    <string name="title_confirmed_password_placeholder">Confirmed Password</string>
    <string name="title_provider">Provider</string>
    <string name="title_receiver">Receiver</string>
    <string name="title_select_role">Please select a default role.</string>
...

    <!-- Actions -->
    <string name="action_go_to_login">Login</string>
    <string name="action_register">REGISTER</string>
    <string name="action_remember_me">Remember Me</string>
    <string name="action_go_to_reset_password">Forgot Password?</string>
    <string name="action_login">LOG IN</string>
    <string name="action_go_to_registration">Create an account.</string>

    <!-- Labels (Titles Subclass) -->
    <string name="title_splash_fragment_label">Splash</string>
    <string name="title_provider_home_fragment_label">Provider Homepage</string>
    <string name="title_registration_fragment_label">Registration</string>
...
