<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/receiver_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/receiver_filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/label_filter"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/receiver_notifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/label_notifications"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>