...
                android:hint="@string/title_password_placeholder"
                android:inputType="textPassword"
                android:text="@={ViewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_forgot_password"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> ViewModel.goToPasswordReset()}"
            android:text="@string/action_go_to_reset_password"
            app:layout_constraintRight_toRightOf="@id/login_password"
...
            android:text="@string/message_not_registered"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_register"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> ViewModel.goToRegistration()}"
            android:text="@string/action_go_to_registration"
            app:layout_constraintBottom_toBottomOf="parent"
...
