...
                    android:onClick="@{() -> ViewModel.selectRole(false)}"
                    android:text="@string/title_receiver" />
            </RadioGroup>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/registration_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_spacing"
                android:text="@string/action_register"
                android:enabled="@{ViewModel.formIsValid}"
                android:onClick="@{() -> ViewModel.register()}"
...
